# zhi-hui

./: README.md
embedded-common/: CMakeLists.txt  Makefile  README.md
embedded-common/docs/: api_reference.md  porting_guide.md
embedded-common/examples/basic/: main.c  ringbuf_example.c  sensor_example.c
embedded-common/include/: common.h
embedded-common/include/data_structure/: crc.h  json.h  list.h  queue.h  ringbuf.h
embedded-common/include/driver/: bmp280.h  dht.h  hcsr04.h  mpu6050.h  ssd1306.h
embedded-common/include/hal/: adc.h  gpio.h  i2c.h  pwm.h  spi.h  timer.h  uart.h
embedded-common/include/protocol/: http.h  mqtt.h  wifi.h
embedded-common/include/security/: aes.h  base64.h  sha.h
embedded-common/include/system/: lowpower.h  mem.h  ota.h  wdt.h
embedded-common/include/utility/: log.h  math.h  str.h  utils.h
embedded-common/tools/: build.sh  doc_gen.sh  test.sh
